# gpr300-sp2025-isabel-rowland

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: lit.frag  lit.vert  shadow.frag  shadow.vert
assignments/assignment4/: main.cpp
assignments/forwardkinematics/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/ew/: texture.cpp  transform.h
core/ir/: animHierarchy.h  animation.h
